test/errors/string_invalid_utf8_error.hy
int main()
{
    string invalid = "\uD800"
    return 0
}